fix:- bug fixes:- alignments, editor , email

--- a/src/app/components/ui/card/card.component.css
+++ b/src/app/components/ui/card/card.component.css
@@ -42,5 +42,6 @@ img {
 }
 
 .card_content {
+  position: relative;
   left: 10%;
 }
