--- a/src/app/components/ui/dropdown/dropdown.component.css
+++ b/src/app/components/ui/dropdown/dropdown.component.css
@@ -27,5 +27,5 @@
 }
 
 .result-item:hover {
-  background-color: #3498db;
+  background-color: #b2d1ff;
 }
